# fomo-control-engine

./: .gitignore  AGENTS.md  CLAUDE.md  HARNESS.md  README.md
backend/: .env.example  notification_state.json  pyproject.toml  quality-baseline.json  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: contracts.py  orchestrator.py  prompts.py
backend/app/analyst/: __init__.py  alignment.py  briefing.py  confluence.py  gauges.py  oneliner.py  param_registry.py  signature_registry.py  stance_history.py
backend/app/api/: deps.py  router_marketdata.py  router_positions.py  router_review.py  router_scout.py  router_system.py  routes.py  scout_routes.py
backend/scripts/: audit_stock_entry_gates.py  check_import_cycles.py  check_mypy_baseline.py  check_quality_baseline.py
backend/tests/: conftest.py  test_action_plan_headline.py  test_agent_contracts.py  test_alert_engine.py  test_alert_response_review.py  test_analyst_briefing.py  test_analyst_gauges.py  test_asset_sessions.py  test_autonomy_loop.py  test_backtest_outcomes.py  test_backtest_signatures_replay.py  test_backtest_statistics.py  test_bitget_provider_parser.py  test_bitget_signer.py  test_bitget_trade_cache.py  test_bitget_trade_flow.py  test_calibration_report_cache.py  test_candidate_scoring.py  test_candidate_signatures.py  test_chart_analysis_context.py  test_decision_memory.py  test_demo_mode_e2e_cycle.py  test_directional_golden.py  test_directional_state_repository.py  test_directional_time_axis.py  test_fomo_attribution.py  test_full_alignment.py  test_harmonic_engine.py  test_health.py  test_hyperliquid_whales.py  test_improvement_proof.py  test_instrument_mapping.py  test_judgment_coverage.py  test_lifecycle_alerts.py  test_liquidation_analysis.py  test_liquidation_heatmap.py  test_liquidity_structure_engine.py  test_live_position_api.py  test_moat_h1_digest.py  test_mock_market_provider.py  (+45 more)
(+437 files in other folders)
