[project]
name = "fomo-control-engine-backend"
version = "0.4.0"
description = "FastAPI backend for the FOMO Control Engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.128.1",
  "httpx==0.28.1",
  "uvicorn==0.40.0",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "apscheduler==3.11.2",
  "python-telegram-bot==22.1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.0.0",
  "ruff==0.15.10",
  "mypy==1.19.1",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
follow_imports = "silent"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "live: tests that call live Bitget APIs",
]

[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
  "app/**/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
